--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,12 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MonsterPhonics"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ReadMeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".GameLogic"
             android:exported="false"
             android:theme="@style/Theme.AppCompat" />
-
         <activity
             android:name=".GameMainMenu"
             android:exported="true"
@@ -24,6 +27,7 @@
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
