--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MonsterPhonics"
         tools:targetApi="31">
         <activity
+            android:name=".PlayGameActivity"
+            android:exported="false" />
+        <activity
             android:name=".ReadMeActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat" />
